--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <div class="container">
 
     <!-- Tarjetas en 3 columnas -->
-    <center><H2 class="card1">EL CICLISMO COMO DEPORTE</H2></center> <br><br>
+    <center><H2 class="card1">HOLAAAAAAAAAAA</H2></center> <br><br>
     <div class="row">
         <div class="col-md-4">
             <div class="card">
