--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <a class="nav-link" href="diversidad.html">DIVERSIDAD</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="galeria.html">GALERIA</a>
+        <a class="nav-link" href="galeria.html">OLDS</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
