--- a/index.html
+++ b/index.html
@@ -204,6 +204,23 @@
 
 <br>
 <br>
+
+<!--FORMULARIO-->
+
+<form id ="crud-form">
+  <label for="nombre"> Nombre:</label>
+  <input type="text" id="nombre">
+  <label for="edad">Edad:</label>
+  <input type="number" id="edad">
+  <button type="button" onclick="crearRegistro()">Crear</button>
+</form>
+
+
+
+
+
+
+
     <!-- Pie de página -->
 <footer class="footer">
   <div class="container">
